--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -52,14 +52,14 @@
   </servlet-mapping>
   <servlet-mapping>
   <servlet-name>TagServlet</servlet-name>
-  <url-pattern>TagServlet</url-pattern>
+  <url-pattern>/TagServlet</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
   <servlet-name>DocumentServlet</servlet-name>
-  <url-pattern>DocumentServlet</url-pattern>
+  <url-pattern>/DocumentServlet</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
   <servlet-name>SearchConnectionServlet</servlet-name>
-  <url-pattern>SearchConnectionServlet</url-pattern>
+  <url-pattern>/SearchConnectionServlet</url-pattern>
   </servlet-mapping>
 </web-app>
