--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.44</version>
+            <scope>runtime</scope>
+            <version>8.0.16</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
